Bug 324262 - A To-do with no Start date, incorrectly sets reminder based on Start date instead of Due date
Summary: A To-do with no Start date, incorrectly sets reminder based on Start date ins...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 4.11
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-30 11:26 UTC by Ioannis Ramfos
Modified: 2013-09-02 17:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Unchecked start date before setting new reminder (56.82 KB, image/png)
2013-08-30 11:27 UTC, Ioannis Ramfos
Details
New reminder dialog options (28.55 KB, image/png)
2013-08-30 11:28 UTC, Ioannis Ramfos
Details
The wrongly set reminder (60.39 KB, image/png)
2013-08-30 11:28 UTC, Ioannis Ramfos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ioannis Ramfos 2013-08-30 11:26:32 UTC
When one creates a new To-do and unchecks the Start date, leaving only the Due date, and tries to set a reminder at a time before or after the event is *Due*, the reminder is set according to when the To-do *starts*, although the new reminder window only shows the Due time as reference.
If both start and due dates are checked, the reminder is set correctly.


Reproducible: Always

Steps to Reproduce:
1. Create a new to-do.
2. Uncheck the start date.
3. Go to the Reminder tab and create a new entry, through the "New" button. The only options refer to a time associated with due date.
4. Select "OK".
Actual Results:  
The reminder is set according to the *Start* date.

Expected Results:  
The reminder is set according to the *Due* date.

Creating a to-do with only the start date active, and setting a reminder works as expected.

This was also a problem in previous 4.10.x versions. Not sure exactly when it appeared.
Comment 1 Ioannis Ramfos 2013-08-30 11:27:54 UTC
Created attachment 82030 [details]
Unchecked start date before setting new reminder
Comment 2 Ioannis Ramfos 2013-08-30 11:28:18 UTC
Created attachment 82031 [details]
New reminder dialog options
Comment 3 Ioannis Ramfos 2013-08-30 11:28:47 UTC
Created attachment 82032 [details]
The wrongly set reminder
Comment 4 Sergio Martins 2013-09-02 17:18:59 UTC
Git commit 6ff4c0e4f5956f0cff3e88a9b1b4e304094c2e94 by Sergio Martins.
Committed on 02/09/2013 at 17:13.
Pushed by smartins into branch 'KDE/4.11'.

Fix the alarm dialog when the to-do doesn't have DTSTART

This code made no sense, probably was never tested?

M  +4    -17   incidenceeditor-ng/alarmdialog.cpp

http://commits.kde.org/kdepim/6ff4c0e4f5956f0cff3e88a9b1b4e304094c2e94