Fix the alarm dialog when the to-do doesn't have DTSTART

This code made no sense, probably was never tested?

BUG: 324262